V1.6.4 - toList not supported in Java 8 -> collect(Collector.toList())